fix(react-ui): Spacing/font fixes and adaptations

--- a/packages/react-digital-ui/components/Box/Box.styles.css
+++ b/packages/react-digital-ui/components/Box/Box.styles.css
@@ -1,7 +1,7 @@
 .DigitalUi-Box {
     display: flex;
     box-sizing: border-box;
-    height: fit-content;
+    height: auto;
 }
 
 .DigitalUi-Box-fullWidth {
