--- a/packages/react-digital-ui/components/Dialog/Dialog.styles.css
+++ b/packages/react-digital-ui/components/Dialog/Dialog.styles.css
@@ -16,10 +16,6 @@
     @media (max-width: 400px) {
         max-width: 90%;
     }
-
-    .DigitalUi-Box {
-        height: auto;
-    }
 }
 
 .DigitalUi-Dialog-wrapper {
