--- a/packages/react-digital-ui/components/Text/Text.styles.css
+++ b/packages/react-digital-ui/components/Text/Text.styles.css
@@ -19,6 +19,10 @@
     font-style: italic;
 }
 
+.DigitalUi-Text-size-xsmall {
+    font-size: var(--font-size-xsmall);
+}
+
 .DigitalUi-Text-size-small {
     font-size: var(--font-size-small);
 }
