--- a/packages/react-digital/Application/App/digital-net.default.css
+++ b/packages/react-digital/Application/App/digital-net.default.css
@@ -24,6 +24,7 @@
     --font-weight-regular: 400;
     --font-weight-medium: 500;
     --font-weight-bold: 700;
+    --font-size-xsmall: 10px;
     --font-size-small: 12px;
     --font-size-regular: 14px;
     --font-size-medium: 16px;
